@@ -1,7 +1,7 @@
 .\"
-.\" $Id: libsmi.3.in,v 1.2 2000/02/10 22:35:04 strauss Exp $
+.\" $Id: libsmi.3.in,v 1.3 2000/02/11 16:42:32 strauss Exp $
 .\"
-.TH libsmi 3  "February 11, 2000" "IBR" "SMI Management Information Library"
+.TH libsmi 3  "November 6, 2000" "IBR" "SMI Management Information Library"
 .SH NAME
 libsmi \- library to access SMI management information
 .SH DESCRIPTION
@@ -60,7 +60,7 @@ int main(int argc, char *argv[])
 .BR "RFCs 2578-2580"
 specify the SMIv2 standard [STD 58].  The SMIng specification is a
 working document of the IRTF
-Network Management Working Group (NMRG) (draft-irtf-nmrg-sming).
+Network Management Working Group (NMRG) (draft-irtf-nmrg-sming-02).
 .PP
 .BR smi.h ", "
 .BR smi_config "(3), "
